commit for profiling addAll